Sculpt: Box/Lasso Tools doesn't work when the object is far from the world origin #80625

Closed
opened 2020-09-09 12:26:29 +02:00 by Lopo Isaac · 7 comments

System Information
Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.138

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-08 22:28, hash: f7fab77f85

Short description of error
Sculpt Box/Lasso Tools fails to trim when the an object is far from the world origin. If the object is closer the trim works but with random/unexpected results. If the object is at the center of the world origin, the tool works as expected.

Exact steps for others to reproduce the error

  1. Move the default cube a few units from the world origin.
  2. Enter Sculpt Mode.
  3. Use box/lasso trim gesture tools.
**System Information** Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.138 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-08 22:28, hash: `f7fab77f85` **Short description of error** Sculpt Box/Lasso Tools fails to trim when the an object is far from the world origin. If the object is closer the trim works but with random/unexpected results. If the object is at the center of the world origin, the tool works as expected. **Exact steps for others to reproduce the error** 1. Move the default cube a few units from the world origin. 2. Enter Sculpt Mode. 3. Use box/lasso trim gesture tools.
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac

#81062 was marked as duplicate of this issue

#81062 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

Update: As reported, this doesn't work if the object is far from the origin... But it doeswork if the object is far from the origin but his origin is in the center of the world. Meaning: if you apply the locacion of an object his origin goes to the center of the world origin. So I guess this tool works but it seems like it creates the under-the-hood boolean geometry taking in account the distance between the 0, 0, 0 of the world and the position of the object's origin (?).

Update: As reported, this doesn't work if the object is far from the origin... **But** it **does**work if the object is far from the origin but **his origin** is in the center of the world. Meaning: if you *apply the locacion* of an object his origin goes to the center of the world origin. So I guess this tool works but it seems like it creates the under-the-hood boolean geometry taking in account the distance between the 0, 0, 0 of the world and the position of the object's origin (?).

This issue was referenced by 6dda0779fc

This issue was referenced by 6dda0779fcdef704a17ed3c0150073f77534d5e5
Member

Added subscriber: @SirPigeonz

Added subscriber: @SirPigeonz
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-10-15 18:56:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80625
No description provided.